--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -18,6 +18,7 @@ jobs:
         node-version: [20.x]
         apps: [web, api, new-api]
         site_tlds: [dev]
+      fail-fast: false
     environment: staging
 
     steps:
