--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-        apps: [web, api, new-api]
+        apps: [new-api]
         site_tlds: [dev]
       fail-fast: false
     environment: staging
